# anglerfish

./: .env.example  .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
docs/: architecture.md  arsenal-demo-script.md  blackhat-europe-demo-script.md  demo-tenant-setup.md  monitoring.md  privacy.md  production-deployment.md  scoping-permissions.md  sentinel-kql.md  threat-model.md  troubleshooting.md
docs/examples/: outlook-draft-record.json  outlook-send-record.json  sanitization.md  ual-mailitemsaccessed-event.json
docs/recordings/: dashboard.tape  interactive-deploy.tape  monitor-alert.tape
docs/superpowers/specs/: 2026-04-01-anglerfish-mvp-reset-design.md  2026-05-06-blackhat-europe-anglerfish-selection-design.md
examples/: Dockerfile  anglerfish-monitor.service
examples/demo-records/: onedrive-upload-record.json  outlook-draft-record.json  outlook-send-record.json  sharepoint-upload-record.json
scripts/: quickstart.sh
src/anglerfish/: __init__.py  __main__.py  _http.py  _io.py  alerts.py  audit.py  auth.py  batch.py  cli.py  config.py  dashboard.py  detect.py  exceptions.py  graph.py  inventory.py  models.py  monitor.py  state.py  templates.py  verify.py
src/anglerfish/cli/: __init__.py  _main.py  batch.py  dashboard.py  deploy.py  monitor.py  prompts.py
src/anglerfish/deployers/: __init__.py  _paths.py  base.py  content.py  onedrive.py  (+4 more)
tests/: test_alerts.py  test_audit.py  test_auth.py  test_batch.py  test_cli_json.py  test_cli_main.py  test_cli_monitor.py  test_cli_prompts.py  test_cli_smoke.py  test_content_rendering.py  test_dashboard.py  test_demo_mode.py  test_detect.py  test_graph.py  test_inventory.py  test_io.py  test_monitor.py  test_monitor_demo.py  test_onedrive_deployer.py  test_outlook_deployer.py  test_registry.py  test_sharepoint_deployer.py  test_state.py  test_teams_deployer.py  test_templates.py  test_verify.py
(+20 files in other folders)
